...
                    .resizable()
                    .scaledToFit()
                    .clipped()
                    .cornerRadius(7)
                    .padding(.horizontal, 7)
                    .tag(0)
                    .accessibilityIdentifier("image1")
                
                Image("smoked-salmon-poke-bowl3")
                    .resizable()
                    .scaledToFit()
                    .clipped()
                    .cornerRadius(7)
                    .padding(.horizontal, 7)
                    .tag(1)
                    .accessibilityIdentifier("image2")
            }
            .tabViewStyle(.page(indexDisplayMode:  !productExtraInformationViewShown ? .automatic : .never))
            .accessibilityIdentifier("imagesTabView")
            .scaleEffect(1 + zoomAmount)
            .gesture(
                MagnificationGesture()
                    .onChanged{ currentAmount in
                        zoomAmount = currentAmount - 1
                    }
...
                        
                        Spacer()
                        
                        // ingredients summary view
                        HStack{
                            Image(systemName: "flame.fill")
                            Image(systemName: "fish.fill")
                            Image(systemName: "aqi.medium")
                            
                        }
                        .foregroundColor(.white)
                        .scaleEffect(!ingredientsViewShown ? 1 : 0.1)
                        .onTapGesture {
...
                    cartViewVisible.toggle()
                } label: {
                    Text("Add to Card")
                        .foregroundColor(.white)
                        .withPositiveButtonModifier(frameWidth: 200, backgroundColor: .black.opacity(0.29))
                }
                .accessibilityIdentifier("addToCartButton")
                .withPositiveButtonStyle()
                .sheet(isPresented: $cartViewVisible){
                    CartView()
                        .accessibilityIdentifier("cardViewPageBottom")
                        .presentationDetents([.height(100), .fraction(0.955)])
                        .presentationDragIndicator(.hidden)
                }
            }
        }
        .opacity(viewState.height > -80 ? 1 : 0)
...
